fix(Components/SliderMedia): remove pointer-events on .slick-dots, so it doesn't overlap Youtube's controls (#245)

--- a/Components/SliderMedia/_slickSliderStyling.styl
+++ b/Components/SliderMedia/_slickSliderStyling.styl
@@ -37,6 +37,7 @@ $slideDotColor = #fff // Color of the dot
   list-style: none
   margin: 0
   padding: 0
+  pointer-events: none
   text-align: center
   width: 100%
 
@@ -63,6 +64,7 @@ $slideDotColor = #fff // Color of the dot
   height: $slideDotsSize
   outline: 0
   padding: 0
+  pointer-events: all
   width: $slideDotsSize
 
 .slick-dots > li.slick-active button
